src/Fortran.h

  // Locations key type
  typedef int F90locs;
  // Goms key type
  typedef int F90goms;
  // Fields key type
  typedef int F90flds;
  // Trajectory for getvalues key type
  typedef int F90getvaltraj;
    void soca_field_interp_tl_f90(const F90flds &,
                                  const F90locs &,
                                  const eckit::Configuration * const *,
                                  const F90goms &);
    void soca_field_interp_tl_traj_f90(const F90flds &,
                                       const F90locs &,
                                       const eckit::Configuration * const *,
                                       const F90goms &,
                                       const F90getvaltraj &);
    void soca_field_interp_ad_f90(const F90flds &,
                                  const F90locs &,
                                  const eckit::Configuration * const *,
                                  const F90goms &,
                                  const F90getvaltraj &);
    void soca_field_gpnorm_f90(const F90flds &, const int &, double &);
    void soca_field_sizes_f90(const F90flds &, int &, int &, int &,
                              int &, int &, int &);
    void soca_field_rms_f90(const F90flds &, double &);