src/Fields/soca_fields.interface.F90


subroutine soca_field_gpnorm_c(c_key_fld, kf, pstat) bind(c,name='soca_field_gpnorm_f90')
  use iso_c_binding
  use soca_fields
  use kinds
  implicit none
  integer(c_int), intent(in) :: c_key_fld
  integer(c_int), intent(in) :: kf
  real(c_double), intent(inout) :: pstat(3*kf)

  type(soca_field), pointer :: fld
  real(kind=kind_real) :: zstat(3, kf)
  integer :: jj, js, jf

  call soca_field_registry%get(c_key_fld,fld)

  call gpnorm(fld, kf, zstat)
  jj=0
  do jf = 1, kf
     do js = 1, 3
        jj=jj+1
        pstat(jj) = zstat(js,jf)
     enddo
  enddo

end subroutine soca_field_gpnorm_c

! ------------------------------------------------------------------------------

subroutine soca_field_rms_c(c_key_fld, prms) bind(c,name='soca_field_rms_f90')
  use iso_c_binding
  use soca_fields
  use kinds
  implicit none
  integer(c_int), intent(in) :: c_key_fld
  real(c_double), intent(inout) :: prms

  type(soca_field), pointer :: fld
  real(kind=kind_real) :: zz

  call soca_field_registry%get(c_key_fld,fld)

  call fldrms(fld, zz)

  prms = zz

end subroutine soca_field_rms_c

! ------------------------------------------------------------------------------

subroutine soca_field_interp_tl_c(c_key_fld,c_key_loc,c_vars,c_key_gom) bind(c,name='soca_field_interp_tl_f90')
  use iso_c_binding
  use soca_fields
  use soca_interpfields_mod
  use ufo_locs_mod_c  
  use ufo_locs_mod    
  use ufo_geovals_mod_c
  use ufo_geovals_mod
  use ufo_vars_mod

  implicit none
  integer(c_int), intent(in)  :: c_key_fld
  integer(c_int), intent(in)  :: c_key_loc
  type(c_ptr), intent(in)     :: c_vars     !< List of requested variables
  integer(c_int), intent(in)  :: c_key_gom
  type(soca_field), pointer   :: fld
  type(ufo_locs),  pointer   :: locs  
  type(ufo_geovals),  pointer :: gom
  type(ufo_vars) :: vars  

  
  call ufo_vars_setup(vars, c_vars)

  call soca_field_registry%get(c_key_fld,fld)
  call ufo_locs_registry%get(c_key_loc,locs)  
  call ufo_geovals_registry%get(c_key_gom,gom)

  call getvalues(fld, locs, vars, gom)

end subroutine soca_field_interp_tl_c

! ------------------------------------------------------------------------------

subroutine soca_field_interp_tl_traj_c(c_key_fld,c_key_loc,c_vars,c_key_gom,c_key_traj) bind(c,name='soca_field_interp_tl_traj_f90')
  use iso_c_binding
  use soca_fields
  use soca_interpfields_mod  
  use ufo_locs_mod_c  
  use ufo_locs_mod    
  use ufo_geovals_mod_c
  use ufo_geovals_mod
  use ufo_vars_mod
  use soca_getvaltraj_mod, only: soca_getvaltraj, soca_getvaltraj_registry  
  implicit none
  integer(c_int),           intent(in) :: c_key_fld
  integer(c_int),           intent(in) :: c_key_loc
  type(c_ptr),              intent(in) :: c_vars     !< List of requested variables
  integer(c_int),           intent(in) :: c_key_gom
  integer(c_int), intent(in), optional :: c_key_traj !< Trajectory for interpolation/transforms  
  type(soca_field), pointer   :: fld
  type(ufo_locs),  pointer   :: locs  
  type(ufo_geovals),  pointer :: gom
  type(ufo_vars) :: vars  
  type(soca_getvaltraj), pointer :: traj

  call ufo_vars_setup(vars, c_vars)

  call soca_field_registry%get(c_key_fld,fld)
  call ufo_locs_registry%get(c_key_loc,locs)  
  call ufo_geovals_registry%get(c_key_gom,gom)
  call soca_getvaltraj_registry%get(c_key_traj,traj)
  
  call getvalues(fld, locs, vars, gom, traj)

end subroutine soca_field_interp_tl_traj_c

! ------------------------------------------------------------------------------

subroutine soca_field_interp_ad_c(c_key_fld,c_key_loc,c_vars,c_key_gom,c_key_traj) bind(c,name='soca_field_interp_ad_f90')
  use iso_c_binding
  use soca_fields
  use soca_interpfields_mod  
  use ufo_locs_mod_c  
  use ufo_locs_mod  
  use ufo_geovals_mod_c
  use ufo_geovals_mod
  use ufo_vars_mod
  use soca_getvaltraj_mod, only: soca_getvaltraj, soca_getvaltraj_registry  
  implicit none
  integer(c_int), intent(in) :: c_key_fld
  integer(c_int), intent(in) :: c_key_loc
  type(c_ptr),    intent(in) :: c_vars     !< List of requested variables  
  integer(c_int), intent(in) :: c_key_gom
  integer(c_int), intent(in) :: c_key_traj !< Trajectory for interpolation/transforms  
  type(soca_field),      pointer :: fld
  type(ufo_locs),       pointer :: locs  
  type(ufo_geovals),     pointer :: gom  
  type(ufo_vars)                 :: vars
  type(soca_getvaltraj), pointer :: traj
  
  call ufo_vars_setup(vars, c_vars)

  call soca_field_registry%get(c_key_fld,fld)
  call ufo_locs_registry%get(c_key_loc,locs)
  call ufo_geovals_registry%get(c_key_gom,gom)
  call soca_getvaltraj_registry%get(c_key_traj,traj)
  
  call getvalues_ad(fld, locs, vars, gom, traj)

end subroutine soca_field_interp_ad_c

! ------------------------------------------------------------------------------

subroutine soca_fieldnum_c(c_key_fld, nx, ny, nzo, nzi, ncat, nf) bind(c,name='soca_field_sizes_f90')
  use iso_c_binding
  use soca_fields

  implicit none
  integer(c_int), intent(in) :: c_key_fld
  integer(kind=c_int), intent(inout) :: nx, ny, nzo, nzi, ncat, nf
  type(soca_field), pointer :: fld

  call soca_field_registry%get(c_key_fld,fld)

  nx = fld%geom%ocean%nx
  ny = fld%geom%ocean%ny
  nzo = fld%geom%ocean%nzo
  nzi = fld%geom%ocean%nzi
  ncat = fld%geom%ocean%ncat
  nf = fld%nf

end subroutine soca_fieldnum_c

! ------------------------------------------------------------------------------
